Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 
 <body>
-    Hello World
+    <img src="images/banner.jpg" alt="profil image" />
+    <h2>Erwin Eka Ardiansyah</h2>
 </body>
 </html>
 
