added initial style

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <head>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <img src="images/banner.jpg" alt="profil image" />
-    <h2>Erwin Eka Ardiansyah</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/banner.jpg" alt="profil image" />
+        <h2 id="profile-name">Erwin Eka Ardiansyah</h2>
+    </div>
+
+   
 </body>
 </html>
 
