adding profile-job

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="profile-container">
         <img id="profile-image" src="images/banner.jpg" alt="profil image" />
         <h2 id="profile-name">Erwin Eka Ardiansyah</h2>
+        <p id="profile-job">Software Engineer</p>
     </div>
 
    <div id="footer">Footer </div>
